run_emulator.sh eklendi. ilgili path ve argümanlar eklend.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.16)
-project(LayOut VERSION 1.0 LANGUAGES C CXX)
+project(WetendEmulatorGUI VERSION 1.0 LANGUAGES C CXX)
 
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 set(CMAKE_AUTOMOC ON)
@@ -11,12 +11,12 @@ find_package(Qt${QT_VERSION_MAJOR} OPTIONAL_COMPONENTS Widgets)
 
 #qt_standard_project_setup()
 
-add_executable(LayOut
+add_executable(WetendEmulatorGUI
     mygraphicsview.cpp mygraphicsview.h
     main.cpp
     mainwindow.cpp mainwindow.h mainwindow.ui
 )
-target_link_libraries(LayOut PRIVATE
+target_link_libraries(WetendEmulatorGUI PRIVATE
     Qt5::Core
     Qt5::Gui
     Qt5::Widgets
