feat(build): include script directory in build and install process
- Added post-build step to copy the script/ directory next to the
compiled binary
- Ensured shell scripts are available at runtime for the application
- Set file permissions to allow execution of installed scripts

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,6 +22,13 @@ target_link_libraries(WetendEmulatorGUI PRIVATE
     Qt5::Widgets
 )
 
+add_custom_command(
+  TARGET WetendEmulatorGUI POST_BUILD
+  COMMAND ${CMAKE_COMMAND} -E copy_directory
+          ${CMAKE_SOURCE_DIR}/script
+          $<TARGET_FILE_DIR:WetendEmulatorGUI>/script
+)
+
 #install(TARGETS LayOut
 #    BUNDLE DESTINATION .
 #    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
